--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "ftpligth",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["FTP"],
+  "author": "Yoenry Vanega Hechavarria",
   "license": "ISC",
   "dependencies": {
     "basic-ftp": "5.0.5",
@@ -24,5 +23,7 @@
     "multer": "1.4.5-lts.1",
     "nodemon": "3.1.0",
     "zod": "3.22.4"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
